# vastctl

./: .gitignore  README.md
cli/: README.md  pyproject.toml
cli/src/vastctl_cli/: __init__.py  context.py  main.py
cli/src/vastctl_cli/commands/: __init__.py  cloud.py  config.py  env.py  instances.py  profiles.py  train.py  transfer.py
core/: README.md  pyproject.toml
core/src/vastctl_core/: __init__.py  auth.py  auto_env.py  cloud_client.py  cloud_http.py  config.py  connection.py  deps.py  environment.py  identity.py  instance.py  profiles.py  provisioning.py  registry.py  snapshot.py  storage.py  train.py  vast_api.py  vast_http.py
tests/: conftest.py  test_deps.py  test_train.py
