[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vastctl-core"
version = "0.1.0"
description = "Core library for Vast.ai GPU instance management (third-party)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "alerad" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24",
    "paramiko>=2.9",
    "python-dotenv>=0.19",
    "appdirs>=1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
keyring = [
    "keyring>=23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vastctl_core"]
